--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Origin</title>
+</head>
+
 <body>
-
-<p>Welcome</p>
-
-<p><b>To Origin.cw</b></p>
+    <h1>Welcome to Origin Design System</h1>
 
 </body>
+
 </html>
